# MultiPlayerGameServerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.cn.md  README.en.md  README.md  config.example.json  vcpkg.json
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: Boost.cmake  protobuf.cmake  zlib.cmake
src/: main.cpp
src/config/: arg_parser.cpp  arg_parser.h  game_config.cpp  game_config.h  json_config_parser.cpp  json_config_parser.h
src/game/: game_main.cpp  game_main.h
src/game/basic/: client_entity.cpp  client_entity.h  component.cpp  component.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  server_entity.cpp  server_entity.h  uuid.h
src/game/component/: network_component.cpp  network_component.h
src/game/service/: login_service.cpp  login_service.h
src/log/: logger.h  logger_imp.h  logger_manager.cpp  logger_manager.h  spdlog_logger_imp.cpp  spdlog_logger_imp.h
src/network/: asio_server.cpp  asio_server.h  asio_tcp_connection.cpp  asio_tcp_connection.h  connection.h  server.h
vcpkg/: vcpkg.json
